src/objects/Constraint_Rule__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date up to which business rule is applicable</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Class__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time_Table__c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date from which a business rule will be applicable</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rule Status to be Active / In-Active</description>
        <inlineHelpText>Rule Status to be Active / In-Active</inlineHelpText>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Constraint Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraint Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>